--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
      if(todayMonth==1){if(todayDate==1){document.getElementById("text1").innerHTML =  "现在是1月1日,祝你"+todayYear+"新年快乐！"}}
      else{document.getElementById("text1").innerHTML =  "提前祝你"+newYear+"新年快乐"}
      document.getElementById("text2").innerHTML = "付憨憨、（-1,0）、付一霖，祝你新年快乐哈。刚开始的你，想起来就很想笑，总是那么的灵性。"
-     document.getElementById("text3").innerHTML = "不过现在已经变得很可爱啦。今天收到了你的礼物，我很喜欢呢，感谢你陪我过以前没有过过的生日呢。你已经看过现实生活中的烟花，你也得看看程序届烟花的绚丽吧。"
+     document.getElementById("text3").innerHTML = "不过现在已经变得很可爱啦。今天收到了你的礼物，我很喜欢呢，感谢你陪我过以前没有过过的生日呢。你已经看过现实生活中的烟花，你也得看看程序届烟花的绚丽吧。希望你能喜欢这个新年礼物呀。"
 
      document.getElementById("time").innerHTML =  diffDays + "天" + diffHours + "小时" + diffMinutes + "分钟" + diffSeconds + "秒"+newYear
 }
